Updated images, added fb icon to contact us.

--- a/app/contact.html
+++ b/app/contact.html
@@ -49,7 +49,7 @@
         <ul class="contact-info">
           <li class="phone"><a href="tel:3173717315">(317) 371-7315</a></li>
           <li class="email"><a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a></li>
-          <li class="facebook"><a href="www.facebook.com/pages/Behavior-Solutions-of-Indiana/326760694194174">Facebook Page</a></li>
+          <li class="facebook"><a href="http://www.facebook.com/pages/Behavior-Solutions-of-Indiana/326760694194174">Facebook</a></li>
         </ul>
 
         <form action="/cgi-bin/cgiemail/formmail.txt" method="post">
@@ -72,7 +72,7 @@
       <footer>
         <p>Behavior Solutions of Indiana, Inc. | Behavior Consulting, Autism Consultation, and ABA Therapy</p>
         <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a></p>
-        <p>Like us on <a href="www.facebook.com/pages/Behavior-Solutions-of-Indiana/326760694194174">Facebook!</a></p>
+        <p>Like us on <a href="http://www.facebook.com/pages/Behavior-Solutions-of-Indiana/326760694194174">Facebook!</a></p>
         <p>Web Design by Sam Hollis</p>
       </footer>
     </div>
