--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,9 @@
 
         <p>We are committed to providing caring, professional behavior services and we bring those services to you &mdash; in your home and in your community.</p>
 
-        <p>Behavior Solutions of Indiana currently provides services in the following areas:</p>  
+        <p>Behavior Solutions of Indiana currently provides services in the following areas:</p>
+
+        <div id="main-float-wrap">
           <ul id="locations">
             <li>Indianapolis</li>
             <li>Fishers</li>
@@ -72,14 +74,17 @@
             <li>Zionsville</li>
           </ul>
 
-          <iframe width="475" height="475" frameborder="0" style="border:0"
-          src="https://www.google.com/maps/embed/v1/view?zoom=10&center=39.8204%2C-86.1281&key=AIzaSyBFI1lyuubRNDyCYLiJn2yePKHFiC7pRVI" id="maps-frame"></iframe>
+          <img src="images/cover-boy.jpg" alt="Boy smiling" id="cover-boy">
+        </div>
+
+        <br />
+        <p id="services-p">We provide a wide range of <a href="services.html">services</a> for your child, to help them reach their full potential in all aspects of life.</p>
       </main>
 
       <footer>
         <p>Behavior Solutions of Indiana, Inc. | Behavior Consulting, Autism Consultation, and ABA Therapy</p>
         <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a></p>
-        <p>Like us on <a href="www.facebook.com/pages/Behavior-Solutions-of-Indiana/326760694194174">Facebook!</a></p>
+        <p>Like us on <a href="http://www.facebook.com/pages/Behavior-Solutions-of-Indiana/326760694194174">Facebook!</a></p>
         <p>Web Design by Sam Hollis</p>
       </footer>
     </div>
