--- a/app/services.html
+++ b/app/services.html
@@ -66,13 +66,14 @@
 
         <p>For further details, please contact us at <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a>.</p>
 
-        <img src="images/baby.jpg" alt="baby" id="baby-img">
+        <br />
+        <img src="images/girl.jpg" alt="girl playing with toys" id="girl-img">
       </main>
 
       <footer>
         <p>Behavior Solutions of Indiana, Inc. | Behavior Consulting, Autism Consultation, and ABA Therapy</p>
         <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a></p>
-        <p>Like us on <a href="www.facebook.com/pages/Behavior-Solutions-of-Indiana/326760694194174">Facebook!</a></p>
+        <p>Like us on <a href="http://www.facebook.com/pages/Behavior-Solutions-of-Indiana/326760694194174">Facebook!</a></p>
         <p>Web Design by Sam Hollis</p>
       </footer>
     </div>
