--- a/app/faqs.html
+++ b/app/faqs.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="We offer behavior consultation, autism consultation, and ABA therapy for children and families in central Indiana. Let's make a difference together!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About Us | Behavior Solutions of Indiana, Inc.</title>
+    <title>FAQs | Behavior Solutions of Indiana, Inc.</title>
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" value="summary">
@@ -67,12 +67,14 @@ hours are flexible.  This allows us to maximize the child’s sessions in their 
         <br />
         <b>Where are you located?</b>
         <p>At BSI, we believe in holding our sessions in the child’s natural environment.  We see clients in their home, daycare settings, and community settings.  We assist clients with outings such as doctor appointments, hair salons, shopping, parks and more.  Our trained staff will come to you and your child.</p>
+
+        <img src="images/boy-therapy.jpg" alt="Boy receiving therapy." id="boy-therapy">
       </main>
 
       <footer>
         <p>Behavior Solutions of Indiana, Inc. | Behavior Consulting, Autism Consultation, and ABA Therapy</p>
         <p>Phone: <a href="tel:3173717315" itemprop="telephone">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:info@behaviorsolutionsindiana.com" itemprop="email">info@behaviorsolutionsindiana.com</a></p>
-        <p>Like us on <a href="www.facebook.com/pages/Behavior-Solutions-of-Indiana/326760694194174">Facebook!</a></p>
+        <p>Like us on <a href="http://www.facebook.com/pages/Behavior-Solutions-of-Indiana/326760694194174">Facebook!</a></p>
         <p>Web Design by Sam Hollis</p>
       </footer>
     </div>
