Added social skills groups and career blurb

--- a/app/about.html
+++ b/app/about.html
@@ -49,7 +49,9 @@
 
         <p><span itemprop="name">Behavior Solutions of Indiana</span> is owned and operated by <span itemprop="founder">Laura Archer, MA, RBC</span>.  As a mother of four, one of whom has autism, she knows first hand what a toll behaviors can take on the entire family.  She has over nine years of experience working directly with special needs children and their families.  Laura received her Master’s of Arts in Applied Behavior Analysis from Ball State University, along with a certificate in Autism, certificate in Rehabilitation/Disability Studies and is registered with the state of Indiana as a Registered Behavior Consultant.</p>
 
-        <p>All of the behavior consultants and behavior technicians at Behavior Solutions of Indiana receive ongoing training to ensure we are providing the most effective and ethical services for our families.</p>
+        <p>All of the behavior consultants and behavior technicians at Behavior Solutions of Indiana receive ongoing training to ensure we are providing the most effective and ethical services for our families. Please don't hesitate to <a href="contact.html">contact us</a> if you have questions about the services we provide.</p>
+
+        <p>If you are interested in joining our team, please email resume and cover letter to <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a>.</p>
 
         <img src="images/boy.jpg" alt="boy" id="boy-img">
 
