--- a/app/services.html
+++ b/app/services.html
@@ -64,7 +64,9 @@
           </ul>
         </p>
 
-        <p>For further details, please contact us at <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a>.</p>
+        <p><strong>New!</strong> We have also just developed a Social Skills Group program that focuses on the development of friendships, building interests, and opportunities to practice overall social skills in a supportive environment.</p> 
+
+        <p>For further details, please <a href="contact.html" >contact us</a>.</p>
 
         <br />
         <img src="images/girl.jpg" alt="girl playing with toys" id="girl-img">
